# xero

./: .dockerignore  .gitignore  ADRENALINE_MODE_PLAN.md  ADVANCED_AGENTIC_COMMANDS_PLAN.md  AGENT-RUN-ACTION-REQUEST-FIX-PLAN.md  AGENTIC-FLOW-WALKTHROUGH.md  AGENTIC_HARNESS_COMPARISON_AND_IMPROVEMENT_PLAN.md  AGENTS.md  AGENTS_CORE_HARNESS_IMPROVEMENT_PLAN.md  AGENTS_TAB_PROMPT_LATENCY_RCA.md  AGENT_CODE_ROLLBACK_PLAN.md  AGENT_CONTEXT_CONTINUITY_AND_MEMORY_PLAN.md  AGENT_CONTEXT_METER_PLAN.md  AGENT_CREATE_PLAN.md  AGENT_DICTATION_MACOS_PLAN.md  AGENT_HARD_ATTACHED_SKILLS_PLAN.md  AGENT_HARNESS_AUDIT_AND_PRODUCTION_PLAN.md  AGENT_MEMORY_LAYER_AUDIT_AND_IMPROVEMENT_PLAN.md  AGENT_RUNTIME_CONVERSATION_FIX_PLAN.md  AGENT_STAGES_PLAN.md  AGENT_SYSTEM_AUDIT_AND_IMPROVEMENTS.md  AGENT_SYSTEM_IMPROVEMENT_PLAN.md  CLAUDE.md  CLOUD_APP_REFACTOR_PLAN.md  CLOUD_PWA_INSTALL_PLAN.md  CLOUD_SESSION_SHELL_ARCHITECTURE.md  COMPUTER-USE-MANUAL-DRAG-PLAN.md  COMPUTER-USE-SYSTEM-CONTROL-AUDIT-PLAN.md  COMPUTER_USE_DESKTOP_CONTROL_PLAN.md  COMPUTER_USE_MANUAL_KEYBOARD_PASSTHROUGH_PLAN.md  COMPUTER_USE_MODE_IMPLEMENTATION_PLAN.md  CONCURRENT_AGENT_CODE_UNDO_PLAN.md  CONVERSATION_IMAGE_OUTPUT_IMPLEMENTATION_PLAN.md  CORE_HARNESS_LANCEDB_IMPROVEMENT_PLAN.md  CRAWL_AGENT_PLAN.md  CURRENT_ARCHITECTURE.md  CURSOR-XERO-HARNESS-PRODUCTION-PLAN.md  DEBUG_AGENT_IMPLEMENTATION_PLAN.md  DEFAULT_AGENT_MODELS_IMPLEMENTATION_PLAN.md  DEV-TOOL-ERROR-LOG-PLAN.md  (+27 more)
client/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json  tauri.macos.conf.json
client/src-tauri/.cargo/: config.toml
client/src-tauri/capabilities/: browser.json  default.json
client/src-tauri/crates/cookie-importer/: Cargo.toml
client/src-tauri/crates/xero-agent-core/: Cargo.toml
client/src-tauri/crates/xero-cli/: Cargo.toml
client/src-tauri/crates/xero-cursor-sidecar/: Cargo.toml
client/src-tauri/crates/xero-desktop-control-ipc/: Cargo.toml
client/src-tauri/crates/xero-desktop-sidecar/: Cargo.toml  build.rs
client/src-tauri/crates/xero-redaction/: Cargo.toml
client/src-tauri/crates/xero-remote-bridge/: Cargo.toml
client/src-tauri/icons/: icon.icns
client/src-tauri/native/dictation/: CapabilityStatus.swift  LegacyEngine.swift  ModernAvailable.swift  ModernStub.swift  SessionLifecycle.swift
client/src-tauri/native/ios-helper/: AccessibilityBridge.swift  Connection.swift  FrameCapture.swift  HidBridge.swift  JpegEncoder.swift  Main.swift
client/src-tauri/permissions/: browser-bridge.toml  desktop-shell.toml
client/src-tauri/proto/: idb.proto
client/src-tauri/resources/: .gitignore  README.md  xero-cursor-sidecar  xero-cursor-sidecar.placeholder  xero-ios-helper
client/src-tauri/resources/solana-toolchain/: README.md
client/src-tauri/scripts/: sign-macos-bundle-resources.sh  sign-macos-target-binaries.sh  tauri-dev-runner.sh
client/src-tauri/src/: developer_tool_error_log.rs  developer_tool_harness_terminal.rs  developer_tool_harness_tui.rs  lib.rs  main.rs  perf.rs  provider_preflight.rs  registry.rs  state.rs  window_state.rs
client/src-tauri/src/auth/: anthropic.rs  mod.rs  openai_codex.rs  openai_compatible.rs  openrouter.rs  sql.rs  store.rs  xai.rs
client/src-tauri/src/commands/: adrenaline_mode.rs  agent_default_models.rs  agent_definition.rs  agent_extensions.rs  agent_reports.rs  agent_session.rs  agent_session_title.rs  agent_task.rs  agent_tooling_settings.rs  apply_workflow_transition.rs  autonomous_web_search.rs  cancel_autonomous_run.rs  code_rollback.rs  complete_oauth_callback.rs  create_repository.rs  desktop_control.rs  developer_tool_error_log.rs  developer_tool_harness.rs  development_storage.rs  dictation.rs  dock_icon.rs  doctor_report.rs  editor_diagnostics.rs  editor_workflows.rs  environment_discovery.rs  get_autonomous_run.rs  get_project_load_bundle.rs  get_project_snapshot.rs  get_project_usage_summary.rs  get_repository_diff.rs  get_repository_status.rs  get_runtime_run.rs  get_runtime_session.rs  get_runtime_settings.rs  git_commit_message.rs  git_operations.rs  global_computer_use.rs  import_mcp_servers.rs  import_repository.rs  list_mcp_servers.rs  (+50 more)
client/src-tauri/src/db/: migrations.rs  mod.rs  project_store.rs
client/src-tauri/src/environment/: mod.rs  probe.rs  service.rs
client/src-tauri/src/git/: diff.rs  operations.rs  repository.rs  status.rs
client/src-tauri/src/global_db/: environment_profile.rs  importer.rs  legacy_runtime_settings.rs  migrations.rs  mod.rs  permissions.rs
client/src-tauri/src/mcp/: connection.rs  mod.rs  registry.rs  runtime_projection.rs
client/src-tauri/src/notifications/: credential_store.rs  discord.rs  mod.rs  route_target.rs  service.rs  telegram.rs
client/src-tauri/src/provider_credentials/: mod.rs  readiness.rs  sql.rs  view.rs
client/src-tauri/src/provider_models/: mod.rs
client/src-tauri/src/provider_profiles/: mod.rs  (+3 more)
client/src-tauri/tests/: agent_context_continuity.rs  agent_coordination.rs  agent_core_runtime.rs  agent_default_model_commands.rs  agent_definition_commands.rs  agent_report_commands.rs  agent_run_wakeups.rs  agent_task_commands.rs  agent_tooling_settings_commands.rs  autonomous_fixture_parity.rs  autonomous_imported_repo_bridge.rs  autonomous_skill_durable_registry.rs  autonomous_skill_model_tool.rs  autonomous_skill_runtime.rs  autonomous_skill_source_contract.rs  autonomous_skill_tool_contract.rs  autonomous_tool_runtime.rs  autonomous_web_runtime.rs  bootstrap_contracts.rs  browser_tool_runtime.rs  code_history_contracts.rs  code_history_file_operation_inverse_planner.rs  code_history_multi_agent_harness.rs  code_history_patchset_storage.rs  code_history_text_inverse_planner.rs  code_history_workspace_storage.rs  dev_runner_contract.rs  editor_asset_security_config.rs  emulator_tool_runtime.rs  import_registry.rs  lancedb_freshness_phase1.rs  mcp_registry_bridge.rs  mcp_registry_store.rs  notification_broker_persistence.rs  notification_channel_dispatch.rs  notification_channel_replies.rs  notification_route_credentials.rs  openai_oauth_auth_flow.rs  operator_loop_persistence.rs  platform-matrix.md  (+21 more)
(+1371 files in other folders)
