[package]
name = "cadence-desktop"
version = "0.1.0"
edition = "2021"
default-run = "cadence-desktop"
description = "Cadence desktop host"
authors = ["sn0w"]

[[bin]]
name = "cadence-desktop"
path = "src/main.rs"

[[bin]]
name = "Cadence-runtime-supervisor"
path = "src/bin/Cadence-runtime-supervisor.rs"

[lib]
name = "cadence_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
doctest = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
git2 = "0.20"
globset = "0.4"
ignore = "0.4"
rand = "0.8"
regex = "1"
portable-pty = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.37", features = ["bundled"] }
rusqlite_migration = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["macos-private-api", "test"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2.5.3"
tempfile = "3"
thiserror = "2"
time = { version = "0.3", features = ["formatting"] }
url = "2"

[dev-dependencies]
tempfile = "3"
