[workspace]
members = ["."]
exclude = ["crates/cookie-importer"]
resolver = "2"

[package]
name = "cadence-desktop"
version = "0.1.0"
edition = "2021"
default-run = "cadence-desktop"
description = "Cadence desktop host"
authors = ["sn0w"]

[[bin]]
name = "cadence-desktop"
path = "src/main.rs"

[[bin]]
name = "Cadence-runtime-supervisor"
path = "src/bin/Cadence-runtime-supervisor.rs"

[lib]
name = "cadence_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
doctest = false

[build-dependencies]
tauri-build = { version = "2", features = [] }
tonic-build = { version = "0.12", optional = true }
protoc-bin-vendored = { version = "3", optional = true }

[features]
# Keep dev startup lean. `ios-grpc` remains available for full iOS
# Simulator HID/streaming work, but the default build uses the
# simctl-screenshot + AppleScript fallback to avoid pulling tonic/prost
# into every `tauri dev` boot.
default = []
# When enabled, `emulator_start` spins up a color-cycling frame generator
# instead of launching a real device. Used for end-to-end testing of the
# frame pipeline without an Android SDK / Xcode.
emulator-synthetic = []
# When enabled, links the `openh264` crate so scrcpy / idb H.264 frames decode
# to RGBA before being re-encoded as JPEG. Without this feature, the Android
# and iOS pipelines can still boot devices, dispatch input, and stream NAL
# units — but frames are not rendered until a decoder is plugged in.
# Gated because `openh264-sys2` requires a C++ toolchain and adds ~30 MB to
# the build artifact.
emulator-live = ["dep:openh264", "ios-grpc"]
# Compiles the vendored `proto/idb.proto` with `tonic-build` and links the
# resulting gRPC client. Required for real iOS streaming, touch/swipe HID,
# and accessibility-tree/log RPCs; builds without this feature fall back to
# a simctl-screenshot poll + AppleScript HID where possible.
ios-grpc = ["dep:tonic", "dep:tonic-build", "dep:protoc-bin-vendored", "dep:prost", "dep:tokio", "dep:tokio-stream"]

[dependencies]
arc-swap = "1"
base64 = "0.22"
bs58 = "0.5"
byteorder = "1"
dirs = "5"
ed25519-dalek = { version = "2", default-features = false, features = ["fast", "std", "rand_core"] }
flate2 = "1"
git2 = "0.20"
globset = "0.4"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
xcap = "0.6"
ignore = "0.4"
libc = "0.2"
openh264 = { version = "0.6", optional = true }
prost = { version = "0.13", optional = true }
quick-xml = "0.36"
rand = "0.8"
regex = "1"
portable-pty = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.37", features = ["bundled"] }
rusqlite_migration = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["macos-private-api", "test", "unstable"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2.5.3"
tempfile = "3"
thiserror = "2"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"], optional = true }
tokio-stream = { version = "0.1", optional = true }
tonic = { version = "0.12", optional = true }
url = "2"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = { version = "0.23", features = ["elcapitan"] }
core-foundation = "0.9"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSRunningApplication", "NSWorkspace", "libc"] }
objc2-foundation = { version = "0.3", features = ["NSArray", "NSString", "NSURL", "libc"] }

[dev-dependencies]
tempfile = "3"
