[workspace]
members = [
    ".",
    "crates/xero-agent-core",
    "crates/xero-cli",
    "crates/xero-desktop-control-ipc",
    "crates/xero-desktop-sidecar",
    "crates/xero-remote-bridge",
]
exclude = ["crates/cookie-importer"]
resolver = "2"

[package]
name = "xero-desktop"
version = "0.1.16"
edition = "2021"
default-run = "xero-desktop"
description = "Xero desktop host"
authors = ["sn0w"]

[[bin]]
name = "xero-desktop"
path = "src/main.rs"

[[bin]]
name = "xero-harness-evals"
path = "src/bin/xero_harness_evals.rs"

[[bin]]
name = "tool-harness"
path = "src/bin/tool_harness.rs"

[[bin]]
name = "xero"
path = "src/bin/xero_tui.rs"

[lib]
name = "xero_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
doctest = false

[build-dependencies]
tauri-build = { version = "2", features = [] }
tonic-build = { version = "0.12", optional = true }
protoc-bin-vendored = { version = "3", optional = true }
flate2 = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
tar = "0.4"

[features]
# ios-grpc is default so touch/swipe/HID input works out of the box
# via idb_companion. The Swift helper (ScreenCaptureKit + IndigoHID) is
# the primary input path; ios-grpc is the fallback when the helper is
# unavailable. Without ios-grpc, touch and swipe fall back to
# AppleScript click-only which can't handle drag gestures.
default = ["ios-grpc"]
# When enabled, `emulator_start` spins up a color-cycling frame generator
# instead of launching a real device. Used for end-to-end testing of the
# frame pipeline without an Android SDK / Xcode.
emulator-synthetic = []
# When enabled, links the `openh264` crate so scrcpy / idb H.264 frames decode
# to RGBA before being re-encoded as JPEG. Without this feature, the Android
# and iOS pipelines can still boot devices, dispatch input, and stream NAL
# units — but frames are not rendered until a decoder is plugged in.
# Gated because `openh264-sys2` requires a C++ toolchain and adds ~30 MB to
# the build artifact.
emulator-live = ["dep:openh264", "ios-grpc"]
# Compiles the vendored `proto/idb.proto` with `tonic-build` and links the
# resulting gRPC client. Required for real iOS streaming, touch/swipe HID,
# and accessibility-tree/log RPCs; builds without this feature fall back to
# a simctl-screenshot poll + AppleScript HID where possible.
ios-grpc = ["dep:tonic", "dep:tonic-build", "dep:protoc-bin-vendored", "dep:prost", "dep:tokio-stream"]
# Enables compilation of the Swift ios-helper binary (xero-ios-helper) in
# build.rs. The helper uses ScreenCaptureKit for 30 FPS frame capture and
# IndigoHID for reliable input injection. Runtime detection works regardless
# of this feature — if the binary exists on disk, the session will use it.
ios-helper = []

[dependencies]
arc-swap = "1"
base64 = "0.22"
bs58 = "0.5"
byteorder = "1"
crossterm = "0.28"
csv = "1"
dirs = "5"
ed25519-dalek = { version = "2", default-features = false, features = ["fast", "std", "rand_core"] }
flate2 = "1"
git2 = { version = "0.20", features = ["vendored-openssl"] }
globset = "0.4"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
xcap = "0.6"
ignore = "0.4"
libc = "0.2"
mime_guess = "2"
openh264 = { version = "0.6", optional = true }
pulldown-cmark = "0.12"
prost = { version = "0.13", optional = true }
quick-xml = "0.36"
rand = "0.8"
ratatui = { version = "0.29", default-features = false, features = ["crossterm", "scrolling-regions"] }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.37", features = ["bundled"] }
rusqlite_migration = "2"
arrow-array = "57"
arrow-schema = "57"
futures = "0.3"
lancedb = { version = "0.27", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tauri = { version = "2", features = ["macos-private-api", "test", "unstable"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2.5.3"
tempfile = "3"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing"] }
toml = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
tokio-stream = { version = "0.1", optional = true }
tonic = { version = "0.12", optional = true }
tungstenite = "0.24"
url = "2"
tar = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
xero-agent-core = { path = "crates/xero-agent-core" }
xero-cli = { path = "crates/xero-cli" }
xero-desktop-control-ipc = { path = "crates/xero-desktop-control-ipc" }
xero-remote-bridge = { path = "crates/xero-remote-bridge" }
tauri-plugin-updater = { version = "2.10", default-features = false, features = ["rustls-tls"] }
tauri-plugin-process = "2.3"
portable-pty = "0.8"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = { version = "0.23", features = ["elcapitan", "highsierra"] }
core-foundation = "0.9"
objc2 = "0.6"
block2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSBitmapImageRep", "NSEvent", "NSImage", "NSImageRep", "NSRunningApplication", "NSView", "NSWindow", "NSWorkspace", "block2", "libc"] }
objc2-foundation = { version = "0.3", features = ["NSArray", "NSData", "NSDictionary", "NSError", "NSDate", "NSObjCRuntime", "NSRunLoop", "NSString", "NSTimer", "NSURL", "block2", "libc"] }
objc2-web-kit = { version = "0.3", features = ["WKSnapshotConfiguration", "WKWebView", "block2", "objc2-app-kit", "objc2-core-foundation"] }

[target.'cfg(target_os = "windows")'.dependencies]
cpal = "0.15"
windows = { version = "0.61.3", features = [
    "Foundation",
    "Foundation_Collections",
    "Globalization",
    "Media_SpeechRecognition",
    "Win32_Foundation",
    "Win32_System_WinRT",
] }

[dev-dependencies]
tempfile = "3"
