[package]
name = "xero-agent-core"
version = "0.1.0"
edition = "2021"
description = "Reusable Xero agent harness facade and storage contracts"

[lib]
doctest = false

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
