[package]
name = "xero-cli"
version = "0.1.0"
edition = "2021"
description = "Headless Xero CLI backed by xero-agent-core"

[lib]
doctest = false

[[bin]]
name = "xero"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
xero-agent-core = { path = "../xero-agent-core" }
zip = { version = "2", default-features = false, features = ["deflate"] }
