[package]
name = "xero-cli"
version = "0.1.39"
edition = "2021"
description = "Headless Xero CLI backed by xero-agent-core"

[lib]
doctest = false

[[bin]]
name = "xero-core"
path = "src/main.rs"

[[bin]]
name = "xero-core-tui"
path = "src/bin/xero_tui.rs"

[dependencies]
crossterm = "0.28"
flate2 = "1"
pulldown-cmark = { version = "0.12", default-features = false }
qrcode = { version = "0.14", default-features = false }
ratatui = { version = "0.29", default-features = false, features = ["crossterm", "scrolling-regions"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
time = { version = "0.3", features = ["formatting"] }
xero-agent-core = { path = "../xero-agent-core" }
xero-remote-bridge = { path = "../xero-remote-bridge" }
zip = { version = "2", default-features = false, features = ["deflate"] }
