[package]
name = "xero-desktop-control-ipc"
version = "0.1.0"
edition = "2021"
description = "Shared IPC contract for Xero Computer Use desktop sidecars"

[lib]
doctest = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing"] }
