[package]
name = "xero-desktop-sidecar"
version = "0.1.0"
edition = "2021"
description = "Xero Computer Use desktop sidecar process"

[[bin]]
name = "xero-desktop-sidecar"
path = "src/main.rs"

[dependencies]
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
webrtc = "0.17.1"
xero-desktop-control-ipc = { path = "../xero-desktop-control-ipc" }
xcap = "0.6"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
core-graphics = { version = "0.23", features = ["elcapitan", "highsierra"] }
apple-cf = { version = "0.9.3", default-features = false, features = ["cm", "cv", "iosurface"] }
# Keep ScreenCaptureKit on an apple-metal release that compiles with the
# macos-15 runner SDK; newer 0.6/0.8 releases reference macOS 26 symbols.
apple-metal = { version = "=0.6.0", default-features = false }
libc = "0.2"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSPasteboard"] }
objc2-foundation = { version = "0.3", features = ["NSArray", "NSData", "NSDictionary", "NSError", "NSObject", "NSString"] }
objc2-vision = { version = "0.3", default-features = false, features = ["std", "VNObservation", "VNRecognizeTextRequest", "VNRequest", "VNRequestHandler", "VNTypes", "objc2-core-foundation"] }
screencapturekit = "6.0.1"
videotoolbox = { version = "0.18.0", default-features = false, features = ["compression"] }

[target.'cfg(any(target_os = "windows", target_os = "linux"))'.dependencies]
arboard = "3"
enigo = "0.6.1"
