[package]
name = "xero-remote-bridge"
version = "0.1.0"
edition = "2021"
description = "Remote bridge primitives for Xero desktop and TUI hosts"

[lib]
doctest = false

[dependencies]
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing"] }
tokio = { version = "1", features = ["sync"] }
tungstenite = { version = "0.26", default-features = false, features = ["handshake", "rustls-tls-webpki-roots"] }
url = "2"
